Bug 170263 - unable to read an ascii armoured gpg encrypted mail with kpgp
Summary: unable to read an ascii armoured gpg encrypted mail with kpgp
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-09-02 18:21 UTC by Jaime Torres
Modified: 2009-05-16 20:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the failing mail (3.41 KB, application/octet-stream)
2008-09-02 18:23 UTC, Jaime Torres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jaime Torres 2008-09-02 18:21:28 UTC
Version:            (using Devel)
Compiler:          gcc  
OS:                Linux
Installed from:    Compiled sources

import the attached mail into any kmail folder and try to open the ascii armored pgp encrypted part.
pressing in the 0xFC2A6CCE1CAC8C1A38DDD664083B72904350C15C.asc link.
You will be prompted to 

Open attachment '0xFC2A6CCE1CAC8C1A38DDD664083B72904350C15C.asc'?
Note that opening an attachment may compromise your system's security.

'Save' 'Open with kpgp' 'cancel'?

Using open with kpgp I get the message, unable to decrypt
file:///home/user/.kde/tmp-machine-user/0xFC2A6CCE1CAC8C1A38DDD664083B72904350C15C.asc%5Bxxxxx%5D.asc
where xxxx are random characters.
Comment 1 Jaime Torres 2008-09-02 18:23:31 UTC
Created attachment 27191 [details]
the failing mail

I've tested it in the kmail/mail/inbox/cur folder
Comment 2 Ruchir Brahmbhatt 2009-04-16 13:22:56 UTC
This seems a kgpg bug as I could open the file with kde3 version of kgpg.
Comment 3 Rolf Eike Beer 2009-05-16 20:15:33 UTC
SVN commit 968841 by dakon:

make importing keys from files when calling from command line work again

BUG:170263


 M  +24 -33    editor/kgpgview.cpp  
 M  +9 -0      editor/kgpgview.h  
 M  +24 -3     kgpg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=968841