make importing keys from files when calling from command line work again

BUG:170263

svn path=/trunk/KDE/kdeutils/kgpg/; revision=968841