editor/kgpgview.h
@@ -37,6 +37,15 @@ public:
     explicit KgpgTextEdit(QWidget *parent, KGpgItemModel *model);
     ~KgpgTextEdit();
 
+    /**
+     * \brief check if a given text is a GPG key
+     * @returns if this is a key and which type of key
+     * @retval 0 no key found
+     * @retval 1 public key found
+     * @retval 2 private key found
+     */
+    static int checkForKey(const QString &message);
+
 signals:
     void newText();
     void resetEncoding(bool);
